--- a/Graph Algorithms/Bellman-Ford shortest path algorithm/Bellman-Ford shortest path algorithm.vcxproj.filters
+++ b/Graph Algorithms/Bellman-Ford shortest path algorithm/Bellman-Ford shortest path algorithm.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Bellman–Ford Algorithm.cpp">
+    <ClCompile Include="Bellman-Ford shortest path algorithm.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
